[gd_scene load_steps=4 format=3 uid="uid://ldl55qs8l3xe"]

[ext_resource type="Script" path="res://script/dialog_box.gd" id="1_bikyl"]
[ext_resource type="JSON" path="res://resources/dialog/test.json" id="2_02tmo"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="2_e3xs1"]

[node name="DialogBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bikyl")
dialog_json = ExtResource("2_02tmo")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -176.0
offset_right = 281.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_group_ = true

[node name="Dialog" type="Label" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
text = "Dialog"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Choices" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("2_e3xs1")

[connection signal="dialog_finished" from="." to="." method="_on_dialog_finished"]
[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
